--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,16 +7,41 @@ spring:
     username: root
     password: root
     driver-class-name: com.mysql.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
     druid:
       initial-size: 5
       max-active: 5
-      test-on-borrow: true
+      test-while-idle: true
+      test-on-borrow: false
+      test-on-return: false
+      filters: stat,wall,log4j
+      validation-query: SELECT 1 FROM DUAL
+      pool-prepared-statements: true
+      max-pool-prepared-statement-per-connection-size: 5
+      connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+
   thymeleaf:
     prefix: classpath:/templates/
     suffix: .html
     cache: false
   messages:
     basename: i18n.login
+#    监控中心
+  boot:
+      admin:
+        client:
+          url: http://localhost:8769
+          instance:
+            name: retiredsoldier
+#          暴露所有
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: ALWAYS
 
 
 mybatis-plus:
